# blurrinator

./: .gitignore  IMPLEMENTATION_PLAN.md  LICENSE  README.md  TASKS.md  app.sh  manage.py  pyproject.toml
.claude/: settings.local.json
.github/: FUNDING.yml
.run/: web.pid  worker.pid
allowlist/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
allowlist/migrations/: 0001_initial.py  0002_enrollmentimage_status_faceembedding.py
blurrinator/: asgi.py  context.py  settings.py  urls.py  wsgi.py
cv2/: __init__.pyi  config.py
cv2/cuda/: __init__.pyi
cv2/detail/: __init__.pyi
cv2/typing/: __init__.py
projects/: admin.py  forms.py  models.py  runtime.py  services.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_facedetection.py  0003_exportjob_progress.py  0004_job_logs.py  0005_exportjob_style.py  0006_remove_exportjob_kind.py  0007_detectionoverride.py  0008_manualblurregion.py  0009_facedetection_landmark_implausible.py
projects/vision/: __init__.py  face_detector.py  face_embedder.py
registry/: admin.py  models.py  urls.py  views.py
registry/migrations/: 0001_initial.py
scripts/: rebuild_opencv_cuda.sh  validate_opencv_cuda.py
static/css/: app.css
templates/: about.html  base.html
templates/allowlist/: detail.html  form.html  index.html
templates/projects/: _analysis_jobs.html  _exports.html  detail.html  draft_review.html  list.html  upload.html
templates/registry/: index.html
templates/users/: form.html  list.html  login.html
users/: forms.py  middleware.py  urls.py  views.py
(+4 files in other folders)
